# trameleon-afstuderen

./: .gitignore  CMakeLists.txt  README.md  TODO.md  glad.cmake  glfw.cmake  nasm.cmake  release.bat  release.sh  run.sh  trameleon-core.cmake  trameleon-dev.cmake  trameleon-netint.cmake  trameleon-nvidia.cmake  trameleon-opengl.cmake  trameleon-vaapi.cmake  trameleon-x264.cmake
include/dev/: tra-profiler-macros.h
include/include/dev/: generator.h
include/include/tra/: api.h  avc.h  buffer.h  core.h  log.h  module.h  types.h  utils.h
include/include/tra/modules/mft/: MediaFoundationEncoder.h
include/include/tra/modules/netint/: netint-dec.h  netint-enc.h  netint-utils.h
include/include/tra/modules/nvidia/: nvidia-converter-kernels.h  nvidia-cuda.h  nvidia-dec.h  nvidia-easy.h  nvidia-enc-host.h  nvidia-enc-opengl.h  nvidia-enc.h  nvidia-utils.h
include/include/tra/modules/opengl/: opengl-api.h  opengl-converter.h  opengl-gfx.h  opengl-interop-cuda.h  opengl.h
include/include/tra/modules/vaapi/: vaapi.h
include/include/tra/modules/vtbox/: vtbox-dec.h  vtbox-enc.h  vtbox-utils.h
include/src/dev/: generator.c
include/src/test/: test-debug.c  test-easy-decoder.c  test-easy-encoder.c  test-log.c  test-module-mft-encoder.c  test-module-netint-decoder.c  test-module-netint-encoder.c  test-module-nvidia-encoder.c  test-module-nvidia-transcoder.c  test-module-vaapi-decoder.c  test-module-vaapi-encoder.c  test-module-x264-encoder.c  test-opengl.c
include/src/tra/: avc.c  dict.c  golomb.c  profiler.c  registry.c  types.c
include/src/tra/modules/easy/: easy-decoder.c  easy-encoder.c
include/src/tra/modules/mft/: MediaFoundationEncoder.cpp
include/src/tra/modules/netint/: netint-dec.c  netint-enc.c  netint-utils.c  netint.c
include/src/tra/modules/nvidia/: nvidia-converter.c  nvidia-easy.c  nvidia-enc-host.c
include/src/tra/modules/opengl/: opengl-api.c  opengl.c
include/src/tra/modules/vaapi/: vaapi-utils.c  vaapi.c
include/src/tra/modules/vtbox/: vtbox-dec.c  vtbox-enc.c  vtbox.c
include/src/tra/modules/x264/: x264.c
include/tra/: capabilityHandler.h  core.h  dict.h  easy.h  golomb.h  module.h  profiler.h  registry.h  time.h  transcoder.h  types.h
include/tra/modules/imageProcessing/: imageProcessor.h
include/tra/modules/mft/: MediaFoundationDecoder.h  MediaFoundationEncoder.h  MediaFoundationUtils.h
include/tra/modules/netint/: netint-dec.h  netint-enc.h  netint-utils.h
include/tra/modules/nvidia/: nvidia-converter.h  nvidia-enc-cuda.h  nvidia.h
include/tra/modules/vaapi/: vaapi-dec.h  vaapi-enc.h  vaapi-utils.h
include/tra/modules/x264/: x264.h
src/dev/: generator.c
src/test/: test-compile.c  test-easy-decoder.c  test-easy-transcoder.c  test-module-mft-decoder.c  test-module-mft-encoder.c  test-module-netint-decoder.c  test-module-netint-encoder.c  test-module-nvidia-converter.c  test-module-nvidia-decoder.c  test-module-nvidia-graphics.c  test-module-vaapi-decoder.c  test-module-vtbox-decoder.c  test-module-vtbox-encoder.c  test-module-x264-encoder.c  test-modules.c  test-opengl-converter.c  test-profiler.c  test-registry.c  test-transcoder-mft.c
src/tra/: buffer.c  capabilityHandler.c  core.c  easy.c  log.c  module.c  registry.c  time.c  transcoder.c  types.c  utils.c
src/tra/modules/easy/: easy-decoder.c  easy-encoder.c  easy-transcoder.c
src/tra/modules/imageProcessing/: imageProcessor.cpp
src/tra/modules/mft/: MediaFoundationDecoder.cpp  MediaFoundationEncoder.cpp  MediaFoundationUtils.cpp  mft.cpp
src/tra/modules/netint/: netint-dec.c  netint-enc.c  netint-utils.c  netint.c
src/tra/modules/nvidia/: nvidia-converter-kernels.cu  nvidia-cuda.c  nvidia-dec.c  nvidia-enc-cuda.c  nvidia-enc-host.c  nvidia-enc-opengl.c  nvidia-enc.c  nvidia-legacy.c  nvidia-utils.c  nvidia.c
src/tra/modules/opengl/: opengl-api.c  opengl-converter.c  opengl-gfx.c  opengl-interop-cuda.c
src/tra/modules/vaapi/: vaapi-dec.c  vaapi-enc.c
src/tra/modules/vtbox/: vtbox-utils.c
src/tra/modules/x264/: x264.c
